...
        android:layout_toRightOf="@+id/circuloGris"
        android:width="72dp"
        android:height="72dp"
        android:background="@drawable/circulo_azul">

        <Button
            android:id="@+id/botonSiguiente"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:width="72dp"
            android:height="72dp"
            android:background="@drawable/boton_siguiente"
            android:gravity="center_vertical|center_horizontal" />
...
            android:layout_centerHorizontal="true"
            android:text="@string/etiqueta_aula"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/campoAula"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_alignStart="@+id/campoNombre"
            android:layout_alignLeft="@+id/campoNombre"
            android:layout_alignEnd="@+id/campoNombre"
...
