...
    <string name="title_activity_alumno" translatable="false">Alumno</string>
    <string name="title_activity_alumno_turno" translatable="false">AlumnoTurno</string>
    <string name="etiqueta_bienvenido">Welcome to TurnoClase</string>
    <string name="etiqueta_selecciona_rol">Please choose your role:</string>
    <string name="boton_alumno">Student</string>
    <string name="boton_profesor">Teacher</string>
    <string name="texto_aula" translatable="false">BE131</string>
    <string name="texto_usuario" translatable="false">a224p05</string>
    <string name="etiqueta_nombre_usuario">Name</string>
    <string name="etiqueta_introduce_datos">Insert your information and tap connect.</string>
    <string name="etiqueta_aula">Classroom</string>
    <string name="boton_conectar">Connect</string>
    <string name="etiqueta_turnos_restantes">Ahead of you in the queue:</string>
...
